--- a/index.html
+++ b/index.html
@@ -11,52 +11,59 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link href="./css/styles.css" rel="stylesheet" />
   </head>
   <body>
     <!--Header-->
-    <header>
-      <nav>
-        <a href="./index.html" class="logo link"
-          >Web<span class="logo-w">Studio</span></a
-        >
+    <header class="header-line">
+      <div class="nav-contaner contaner">
+        <nav class="navigation">
+          <a href="./index.html" class="logo link"
+            >Web<span class="logo-w">Studio</span></a
+          >
 
-        <ul class="nav-list list">
-          <li>
-            <a href="./index.html" class="nav-link link">Studio</a>
-          </li>
-          <li>
-            <a href="./portfolio.html" class="nav-link link">Portfolio</a>
-          </li>
-          <li>
-            <a href="" class="nav-link link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
+          <ul class="nav-list list">
+            <li class="nav-item">
+              <a href="./index.html" class="nav-link link">Studio</a>
+            </li>
+            <li class="nav-item">
+              <a href="./portfolio.html" class="nav-link link">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
 
-      <address class="address">
-        <ul class="addr-list list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="address-link link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="address-link link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <address class="nav-address">
+          <ul class="addr-list list">
+            <li class="addr-item">
+              <a href="mailto:info@devstudio.com" class="address-link link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="addr-item">
+              <a href="tel:+110001111111" class="address-link link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <!--Main content-->
 
     <main>
       <!--Section hero-->
-      <section class="section hero">
-        <h1 class="section-title hero-title">
-          Effective Solutions for Your Business
+      <section class="section no-section hero">
+        <h1 class="hero-title">
+          Effective Solutions<br />
+          for Your Business
         </h1>
 
         <button type="button" class="btn">Order Service</button>
@@ -64,118 +71,137 @@
 
       <!--Section skills-->
       <section class="section">
-        <h2 class="section-title transparent">Skills</h2>
-        <!--Заховати за допомогою css-->
+        <div class="contaner">
+          <h2 class="section-title transparent">Skills</h2>
+          <!--Заховати за допомогою css-->
 
-        <ul class="list">
-          <li>
-            <h3 class="section-title pro-title">Strategy</h3>
-            <p class="text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-title pro-title">Punctuality</h3>
-            <p class="text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-title pro-title">Diligence</h3>
-            <p class="text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-title pro-title">Technologies</h3>
-            <p class="text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+          <ul class="skills-list list">
+            <li class="skills-item">
+              <h3 class="pro-title">Strategy</h3>
+              <p class="text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="skills-item">
+              <h3 class="pro-title">Punctuality</h3>
+              <p class="text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="skills-item">
+              <h3 class="pro-title">Diligence</h3>
+              <p class="text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="skills-item">
+              <h3 class="pro-title">Technologies</h3>
+              <p class="text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Section works-->
-      <section class="section">
-        <h2 class="section-title">What are we doing</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/img-one.jpg"
-              alt="computer monitor"
-              width="360"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img-two.jpg"
-              alt="four smartphone screens with open applications"
-              width="360"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img-three.jpg"
-              alt="smartphone in hand on the background of a laptop"
-              width="360"
-            />
-          </li>
-        </ul>
+      <section class="section no-section">
+        <div class="contaner">
+          <h2 class="section-title">What are we doing</h2>
+          <ul class="work-list list">
+            <li class="work-item">
+              <img
+                src="./images/img-one.jpg"
+                alt="computer monitor"
+                width="360"
+                class="img-work"
+              />
+            </li>
+            <li class="work-item">
+              <img
+                src="./images/img-two.jpg"
+                alt="four smartphone screens with open applications"
+                width="360"
+                class="img-work"
+              />
+            </li>
+            <li class="work-item">
+              <img
+                src="./images/img-three.jpg"
+                alt="smartphone in hand on the background of a laptop"
+                width="360"
+                class="img-work"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Section team-->
-      <section class="section">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/img-mark.jpg"
-              alt="photo Mark Guerrero"
-              width="264"
-            />
-            <h3 class="section-title card-title">Mark Guerrero</h3>
-            <p class="about-text">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/img-tom.jpg" alt="photo Tom Ford" width="264" />
-            <h3 class="section-title card-title">Tom Ford</h3>
-            <p class="about-text">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-camila.jpg"
-              alt="photo Camila Garcia"
-              width="264"
-            />
-            <h3 class="section-title card-title">Camila Garcia</h3>
-            <p class="about-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-daniel.jpg"
-              alt="photo Daniel Wilson"
-              width="264"
-            />
-            <h3 class="section-title card-title">Daniel Wilson</h3>
-            <p class="about-text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="section section-team">
+        <div class="contaner">
+          <h2 class="section-title">Our Team</h2>
+          <ul class="team-list list">
+            <li class="team-item">
+              <img
+                src="./images/img-mark.jpg"
+                alt="photo Mark Guerrero"
+                width="264"
+                class="img-team"
+              />
+              <h3 class="card-title">Mark Guerrero</h3>
+              <p class="about-text">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/img-tom.jpg"
+                alt="photo Tom Ford"
+                width="264"
+                class="img-team"
+              />
+              <h3 class="card-title">Tom Ford</h3>
+              <p class="about-text">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/img-camila.jpg"
+                alt="photo Camila Garcia"
+                width="264"
+                class="img-team"
+              />
+              <h3 class="card-title">Camila Garcia</h3>
+              <p class="about-text">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/img-daniel.jpg"
+                alt="photo Daniel Wilson"
+                width="264"
+                class="img-team"
+              />
+              <h3 class="card-title">Daniel Wilson</h3>
+              <p class="about-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!--Footer-->
     <footer class="footer">
-      <a href="./index.html" class="logo link"
-        >Web<span class="logo-stud">Studio</span></a
-      >
-      <p class="foot-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="page-footer">
+        <a href="./index.html" class="logo link"
+          >Web<span class="logo-stud">Studio</span></a
+        >
+        <p class="foot-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
