--- a/portfolio.html
+++ b/portfolio.html
@@ -11,44 +11,50 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link href="./css/styles.css" rel="stylesheet" />
   </head>
   <body>
     <!--Header-->
 
-    <header>
-      <nav>
-        <a href="./index.html" class="logo link"
-          >Web<span class="logo-w">Studio</span></a
-        >
+    <header class="header-line">
+      <div class="nav-contaner contaner">
+        <nav class="navigation">
+          <a href="./index.html" class="logo link"
+            >Web<span class="logo-w">Studio</span></a
+          >
 
-        <ul class="nav-list list">
-          <li>
-            <a href="./index.html" class="nav-link link">Studio</a>
-          </li>
-          <li>
-            <a href="./portfolio.html" class="nav-link link">Portfolio</a>
-          </li>
-          <li>
-            <a href="" class="nav-link link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
+          <ul class="nav-list list">
+            <li class="nav-item">
+              <a href="./index.html" class="nav-link link">Studio</a>
+            </li>
+            <li class="nav-item">
+              <a href="./portfolio.html" class="nav-link link">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
 
-      <address class="address">
-        <ul class="addr-list list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="address-link link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="address-link link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <address class="nav-address">
+          <ul class="addr-list list">
+            <li class="addr-item">
+              <a href="mailto:info@devstudio.com" class="address-link link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="addr-item">
+              <a href="tel:+110001111111" class="address-link link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <!--Main content-->
@@ -179,13 +185,15 @@
     <!--Footer-->
 
     <footer class="footer">
-      <a href="./index.html" class="logo link"
-        >Web<span class="logo-stud">Studio</span></a
-      >
-      <p class="foot-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="page-footer">
+        <a href="./index.html" class="logo link"
+          >Web<span class="logo-stud">Studio</span></a
+        >
+        <p class="foot-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
