--- a/portfolio.html
+++ b/portfolio.html
@@ -87,101 +87,110 @@
           </div>
 
           <div class="projects-blok">
-            <ul class="list">
-              <li>
+            <ul class="projects-list list">
+              <li class="projects-item">
                 <a href="" class="about-btn link">
                   <img
                     src="./images/img-banking.jpg"
                     alt="photo Banking App Interface Concept"
                     width="360"
+                    class="img-projects"
                   />
                   <h2 class="works-title">Banking App Interface Concept</h2>
                   <p class="pro-text">App</p></a
                 >
               </li>
-              <li>
+              <li class="projects-item">
                 <a href="" class="about-btn link">
                   <img
                     src="./images/img-cashless.jpg"
                     alt="photo application Concept of Cashless Payments"
                     width="360"
+                    class="img-projects"
                   />
                   <h2 class="works-title">Cashless Payment</h2>
                   <p class="pro-text">Marketing</p></a
                 >
               </li>
-              <li>
+              <li class="projects-item">
                 <a href="" class="about-btn link">
                   <img
                     src="./images/img-meditation.jpg"
                     alt="photo Meditation App"
                     width="360"
+                    class="img-projects"
                   />
                   <h2 class="works-title">Meditation App</h2>
                   <p class="pro-text">App</p></a
                 >
               </li>
-              <li>
+              <li class="projects-item">
                 <a href="" class="about-btn link">
                   <img
                     src="./images/img-taxi.jpg"
                     alt="photo App Taxi Service"
                     width="360"
+                    class="img-projects"
                   />
                   <h2 class="works-title">Taxi Service</h2>
                   <p class="pro-text">Marketing</p></a
                 >
               </li>
-              <li>
+              <li class="projects-item">
                 <a href="" class="about-btn link">
                   <img
                     src="./images/img-screen.jpg"
                     alt="smartphone screen illustration photo"
                     width="360"
+                    class="img-projects"
                   />
                   <h2 class="works-title">Screen Illustrations</h2>
                   <p class="pro-text">Design</p></a
                 >
               </li>
-              <li>
+              <li class="projects-item">
                 <a href="" class="about-btn link">
                   <img
                     src="./images/img-online.jpg"
                     alt="photo online course service"
                     width="360"
+                    class="img-projects"
                   />
                   <h2 class="works-title">Online Courses</h2>
                   <p class="pro-text">Marketing</p></a
                 >
               </li>
-              <li>
+              <li class="projects-item">
                 <a href="" class="about-btn link">
                   <img
                     src="./images/img-insta.jpg"
                     alt="photo application Instagram Stories Concept"
                     width="360"
+                    class="img-projects"
                   />
                   <h2 class="works-title">Instagram Stories Concept</h2>
                   <p class="pro-text">Design</p></a
                 >
               </li>
-              <li>
+              <li class="projects-item">
                 <a href="" class="about-btn link">
                   <img
                     src="./images/img-organic.jpg"
                     alt="photo website for Organic Food"
                     width="360"
+                    class="img-projects"
                   />
                   <h2 class="works-title">Organic Food</h2>
                   <p class="pro-text">Web Site</p></a
                 >
               </li>
-              <li>
+              <li class="projects-item">
                 <a href="" class="about-btn link">
                   <img
                     src="./images/img-fresh.jpg"
                     alt="photo website for  Fresh Coffee"
                     width="360"
+                    class="img-projects"
                   />
                   <h2 class="works-title">Fresh Coffee</h2>
                   <p class="pro-text">Web Site</p></a
