виправлені помилки у секціях hero, works та прибраний курсив у тезі address

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </section>
 
       <!--Section works-->
-      <section class="section no-section">
+      <section class="section section-works">
         <div class="contaner">
           <h2 class="section-title">What are we doing</h2>
           <ul class="work-list list">
@@ -142,7 +142,7 @@
       </section>
 
       <!--Section team-->
-      <section class="section section-team">
+      <section class="section section-team no-section">
         <div class="contaner">
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list list">
